--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="product">
             <h2>Camiseta de Manga Corta</h2>
             <p>Precio: $20.00</p>
-            <img src="camiseta-manga-corta.jpg" alt="Camiseta de Manga Corta">
+            <img src="imagenes/camiseta.png" alt="Camiseta de Manga Corta">
             <p>Descripción: Una camiseta cómoda y fresca para el verano.</p>
             <button>Agregar al Carrito</button>
         </div>
