--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             margin-bottom: 20px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
+        .product img {
+            max-width: 300px;
+            height: auto;
+            display: block;
+            margin: 10px auto;
+        }
         footer {
             background-color: #333;
             color: #fff;
@@ -75,7 +81,6 @@
             <p>Descripción: Pantalones modernos y ajustados.</p>
             <button>Agregar al Carrito</button>
         </div>
-        <!-- Agrega más productos según sea necesario -->
     </div>
     <footer>
         <p>&copy; 2025 Tienda de Ropa. Todos los derechos reservados.</p>
