--- a/index.html
+++ b/index.html
@@ -1,89 +1,137 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de Ropa</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav {
-            background-color: #444;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 0 10px;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 5px;
-        }
-        .product {
-            background-color: #fff;
-            padding: 5px;
-            margin-bottom: 20px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        .product img {
-            max-width: 300px;
-            height: auto;
-            display: block;
-            margin: 10px auto;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 5px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Camiseta Cuello Redondo</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      background-color: #fff;
+      color: #333;
+    }
+    header {
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #f2f2f2;
+      padding: 10px;
+      gap: 20px;
+    }
+    nav a {
+      text-decoration: none;
+      color: #000;
+      font-weight: bold;
+    }
+    .container {
+      display: flex;
+      max-width: 1200px;
+      margin: 30px auto;
+      gap: 40px;
+      padding: 0 20px;
+    }
+    .image-section img {
+      width: 100%;
+      max-width: 450px;
+      border: 1px solid #ccc;
+    }
+    .details-section {
+      flex: 1;
+    }
+    .details-section h2 {
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+    .price {
+      font-size: 24px;
+      color: #c00;
+      margin: 15px 0;
+    }
+    .sizes span {
+      display: inline-block;
+      padding: 8px 12px;
+      margin: 5px;
+      border: 1px solid #ccc;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    .sizes span.sold-out {
+      text-decoration: line-through;
+      color: #aaa;
+      border-color: #aaa;
+      cursor: not-allowed;
+    }
+    .button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 25px;
+      background-color: #000;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    .info-list {
+      margin-top: 15px;
+      list-style: none;
+      padding: 0;
+    }
+    .info-list li {
+      margin: 5px 0;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Tienda de Ropa</h1>
-    </header>
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Hombre</a>
-        <a href="#">Mujer</a>
-        <a href="#">Niños</a>
-        <a href="#">Contacto</a>
-    </nav>
-    <div class="container">
-        <div class="product">
-            <h2>Camiseta de Manga Corta</h2>
-            <p>Precio: $20.00</p>
-            <img src="imagenes/camiseta.png" alt="Camiseta de Manga Corta">
-            <p>Descripción: Una camiseta cómoda y fresca para el verano.</p>
-            <button>Agregar al Carrito</button>
-        </div>
-        <div class="product">
-            <h2>Pantalones Vaqueros</h2>
-            <p>Precio: $30.00</p>
-            <img src="pantalones-vaqueros.jpg" alt="Pantalones Vaqueros">
-            <p>Descripción: Pantalones modernos y ajustados.</p>
-            <button>Agregar al Carrito</button>
-        </div>
+
+  <header>
+    <h1>ROLAND</h1>
+  </header>
+
+  <nav>
+    <a href="#">MUJER</a>
+    <a href="#">HOMBRE</a>
+    <a href="#">KIDS</a>
+    <a href="#">CANDY SHOP</a>
+    <a href="#">ACCESORIOS</a>
+    <a href="#">REBAJAS</a>
+    <a href="#">REGÍSTRATE</a>
+  </nav>
+
+  <div class="container">
+    <div class="image-section">
+      <img src="imagenes/camiseta.png" alt="Camiseta Cuello Redondo">
     </div>
-    <footer>
-        <p>&copy; 2025 Tienda de Ropa. Todos los derechos reservados.</p>
-    </footer>
+    <div class="details-section">
+      <p><strong>Roland</strong></p>
+      <h2>CAMISETA CUELLO REDONDO JERSEY VINO</h2>
+      <p>CÓDIGO: BCF-2321</p>
+      
+      <div class="sizes">
+        <p><strong>Talla:</strong></p>
+        <span>S</span>
+        <span>M</span>
+        <span>L</span>
+        <span class="sold-out">XL</span>
+        <span class="sold-out">XXL</span>
+      </div>
+
+      <button class="button">Agregar al carrito</button>
+
+      <ul class="info-list">
+        <li>• Pack x1</li>
+        <li>• Composición: 95% ALGODÓN – 5% ELASTANO</li>
+        <li>• Línea Basic</li>
+      </ul>
+
+      <p class="price">$9.99</p>
+    </div>
+  </div>
+
 </body>
 </html>
