--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     }
     header {
       background-color: #000;
-      color: #fff;
+      color: green;
       text-align: center;
       padding: 10px;
     }
     nav {
       display: flex;
       justify-content: center;
-      background-color: #f2f2f2;
+      background-color: #d162cf;
       padding: 10px;
       gap: 20px;
     }
