--- a/index.html
+++ b/index.html
@@ -3,134 +3,161 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Camiseta Cuello Redondo</title>
+  <title>Alejandra</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
       margin: 0;
+      font-family: 'Segoe UI', sans-serif;
       background-color: #fff;
-      color: #333;
+      color: #000;
     }
-    header {
+
+    .top-banner {
       background-color: #000;
-      color: green;
+      color: #fff;
       text-align: center;
-      padding: 10px;
+      font-size: 14px;
+      padding: 5px;
     }
+
+    .top-nav {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 30px;
+      font-size: 14px;
+    }
+
+    .top-nav div {
+      display: flex;
+      gap: 20px;
+    }
+
+    header {
+      text-align: center;
+      padding: 10px 0;
+    }
+
+    header h1 {
+      color: red;
+      font-family: 'Georgia', serif;
+      font-size: 36px;
+      margin: 0;
+    }
+
     nav {
       display: flex;
       justify-content: center;
-      background-color: #d162cf;
-      padding: 10px;
-      gap: 20px;
-    }
-    nav a {
-      text-decoration: none;
-      color: #000;
+      gap: 25px;
       font-weight: bold;
+      border-top: 1px solid #eee;
+      border-bottom: 1px solid #eee;
+      padding: 10px 0;
     }
-    .container {
-      display: flex;
-      max-width: 1200px;
-      margin: 30px auto;
-      gap: 40px;
-      padding: 0 20px;
+
+    .info-bar {
+      text-align: center;
+      font-size: 14px;
+      padding: 10px;
+      color: #333;
     }
-    .image-section img {
-      width: 100%;
-      max-width: 450px;
-      border: 1px solid #ccc;
+
+    .promo {
+      background-color: yellow;
+      text-align: center;
+      padding: 30px 20px;
     }
-    .details-section {
-      flex: 1;
-    }
-    .details-section h2 {
-      font-size: 28px;
+
+    .promo h2 {
+      font-size: 26px;
       margin-bottom: 10px;
     }
-    .price {
-      font-size: 24px;
-      color: #c00;
-      margin: 15px 0;
+
+    .promo p {
+      font-size: 16px;
+      margin-bottom: 20px;
     }
-    .sizes span {
-      display: inline-block;
-      padding: 8px 12px;
-      margin: 5px;
-      border: 1px solid #ccc;
-      cursor: pointer;
-      border-radius: 5px;
+
+    .promo .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
     }
-    .sizes span.sold-out {
-      text-decoration: line-through;
-      color: #aaa;
-      border-color: #aaa;
-      cursor: not-allowed;
-    }
-    .button {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 25px;
-      background-color: #000;
-      color: #fff;
+
+    .promo button {
+      padding: 10px 20px;
       border: none;
+      font-weight: bold;
       cursor: pointer;
-      border-radius: 5px;
+      background-color: white;
+      border: 2px solid black;
     }
-    .info-list {
-      margin-top: 15px;
-      list-style: none;
-      padding: 0;
+
+    .search-bar {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      padding: 10px 30px;
+      gap: 10px;
     }
-    .info-list li {
-      margin: 5px 0;
+
+    .search-bar input {
+      padding: 8px;
+      border: none;
+      border-bottom: 1px solid black;
+      width: 200px;
     }
   </style>
 </head>
 <body>
 
+  <div class="top-banner">
+    -15% en un artículo + envío gratis al suscribirte a Fashion News
+  </div>
+
+  <div class="top-nav">
+    <div>
+      <span>Servicio al cliente</span>
+      <span>Fashion News</span>
+      <span>Encontrar una tienda</span>
+    </div>
+    <div>
+      <span>Iniciar sesión</span>
+      <span>❤ Favoritos</span>
+      <span>🛍 Shopping Bag (0)</span>
+    </div>
+  </div>
+
   <header>
-    <h1>ROLAND</h1>
+    <h1>Alejandra</h1>
   </header>
 
   <nav>
-    <a href="#">MUJER</a>
-    <a href="#">HOMBRE</a>
-    <a href="#">KIDS</a>
-    <a href="#">CANDY SHOP</a>
-    <a href="#">ACCESORIOS</a>
-    <a href="#">REBAJAS</a>
-    <a href="#">REGÍSTRATE</a>
+    <a href="#">Mujer</a>
+    <a href="#">Hombre</a>
+    <a href="#">Bebé</a>
+    <a href="#">Niños</a>
+    <a href="#">Sport</a>
+    <a href="#">Rebajas</a>
+    <a href="#">Sostenibilidad</a>
   </nav>
 
-  <div class="container">
-    <div class="image-section">
-      <img src="imagenes/camiseta.png" alt="Camiseta Cuello Redondo">
+  <div class="info-bar">
+    Envíos gratis desde $45 | Suscríbete a Fashion News | Devoluciones gratuitas
+  </div>
+
+  <div class="promo">
+    <h2>¡Es tiempo de vacaciones!</h2>
+    <p>Prepárate para el verano con estilos frescos y livianos.</p>
+    <div class="buttons">
+      <button>Mujer</button>
+      <button>Hombre</button>
+      <button>Niños</button>
     </div>
-    <div class="details-section">
-      <p><strong>Roland</strong></p>
-      <h2>CAMISETA CUELLO REDONDO JERSEY VINO</h2>
-      <p>CÓDIGO: BCF-2321</p>
-      
-      <div class="sizes">
-        <p><strong>Talla:</strong></p>
-        <span>S</span>
-        <span>M</span>
-        <span>L</span>
-        <span class="sold-out">XL</span>
-        <span class="sold-out">XXL</span>
-      </div>
+  </div>
 
-      <button class="button">Agregar al carrito</button>
-
-      <ul class="info-list">
-        <li>• Pack x1</li>
-        <li>• Composición: 95% ALGODÓN – 5% ELASTANO</li>
-        <li>• Línea Basic</li>
-      </ul>
-
-      <p class="price">$9.99</p>
-    </div>
+  <div class="search-bar">
+    <label for="buscar">🔍</label>
+    <input type="text" id="buscar" placeholder="Buscar productos">
   </div>
 
 </body>
