--- a/index.html
+++ b/index.html
@@ -5,159 +5,131 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Alejandra</title>
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fff;
-      color: #000;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    .top-banner {
-      background-color: #000;
+    body, html {
+      height: 100%;
+      font-family: 'Arial', sans-serif;
+    }
+
+    .container {
+      display: flex;
+      height: 100vh;
+    }
+
+    .left, .right {
+      width: 50%;
+      background-size: cover;
+      background-position: center;
+    }
+
+    .left {
+      background-image: url('https://i.imgur.com/NXy1EfD.jpg'); /* Imagen similar a la izquierda de Zara */
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: white;
+    }
+
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.3);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .content {
+      position: relative;
+      z-index: 2;
+      text-align: center;
       color: #fff;
-      text-align: center;
-      font-size: 14px;
-      padding: 5px;
     }
 
-    .top-nav {
-      display: flex;
-      justify-content: space-between;
-      padding: 10px 30px;
-      font-size: 14px;
-    }
-
-    .top-nav div {
-      display: flex;
-      gap: 20px;
-    }
-
-    header {
-      text-align: center;
-      padding: 10px 0;
-    }
-
-    header h1 {
-      color: red;
-      font-family: 'Georgia', serif;
-      font-size: 36px;
-      margin: 0;
-    }
-
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 25px;
+    .logo {
+      font-size: 60px;
       font-weight: bold;
-      border-top: 1px solid #eee;
-      border-bottom: 1px solid #eee;
-      padding: 10px 0;
-    }
-
-    .info-bar {
-      text-align: center;
-      font-size: 14px;
-      padding: 10px;
-      color: #333;
-    }
-
-    .promo {
-      background-color: yellow;
-      text-align: center;
-      padding: 30px 20px;
-    }
-
-    .promo h2 {
-      font-size: 26px;
-      margin-bottom: 10px;
-    }
-
-    .promo p {
-      font-size: 16px;
+      letter-spacing: 5px;
+      color: white;
       margin-bottom: 20px;
+      font-family: 'Georgia', serif;
     }
 
-    .promo .buttons {
+    .form {
       display: flex;
+      gap: 10px;
+      margin-top: 10px;
       justify-content: center;
-      gap: 15px;
+      flex-wrap: wrap;
     }
 
-    .promo button {
-      padding: 10px 20px;
+    .form select, .form button {
+      padding: 10px;
       border: none;
+      background-color: rgba(255,255,255,0.8);
+      color: #000;
       font-weight: bold;
       cursor: pointer;
-      background-color: white;
-      border: 2px solid black;
     }
 
-    .search-bar {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      padding: 10px 30px;
-      gap: 10px;
+    .form button:hover {
+      background-color: #fff;
     }
 
-    .search-bar input {
-      padding: 8px;
-      border: none;
-      border-bottom: 1px solid black;
-      width: 200px;
+    .remember {
+      margin-top: 10px;
+      font-size: 14px;
     }
+
+    .right {
+      background-image: url('https://i.imgur.com/mnZAGHV.jpg'); /* Imagen similar a la derecha de Zara */
+    }
+
+    .cookies {
+      position: absolute;
+      bottom: 10px;
+      right: 20px;
+      font-size: 12px;
+      color: #fff;
+      z-index: 2;
+    }
+
   </style>
 </head>
 <body>
 
-  <div class="top-banner">
-    -15% en un artículo + envío gratis al suscribirte a Fashion News
-  </div>
-
-  <div class="top-nav">
-    <div>
-      <span>Servicio al cliente</span>
-      <span>Fashion News</span>
-      <span>Encontrar una tienda</span>
+  <div class="container">
+    <div class="left">
+      <div class="overlay"></div>
+      <div class="content">
+        <div class="logo">ALEJANDRA</div>
+        <div class="form">
+          <select>
+            <option>ECUADOR</option>
+            <option>MÉXICO</option>
+            <option>ESPAÑA</option>
+          </select>
+          <select>
+            <option>ESPAÑOL</option>
+            <option>ENGLISH</option>
+          </select>
+          <button>GO</button>
+        </div>
+        <div class="remember">
+          <input type="checkbox" id="recordar" />
+          <label for="recordar">Recordar selección</label>
+        </div>
+      </div>
+      <div class="cookies">COOKIES SETTINGS</div>
     </div>
-    <div>
-      <span>Iniciar sesión</span>
-      <span>❤ Favoritos</span>
-      <span>🛍 Shopping Bag (0)</span>
-    </div>
-  </div>
-
-  <header>
-    <h1>Alejandra</h1>
-  </header>
-
-  <nav>
-    <a href="#">Mujer</a>
-    <a href="#">Hombre</a>
-    <a href="#">Bebé</a>
-    <a href="#">Niños</a>
-    <a href="#">Sport</a>
-    <a href="#">Rebajas</a>
-    <a href="#">Sostenibilidad</a>
-  </nav>
-
-  <div class="info-bar">
-    Envíos gratis desde $45 | Suscríbete a Fashion News | Devoluciones gratuitas
-  </div>
-
-  <div class="promo">
-    <h2>¡Es tiempo de vacaciones!</h2>
-    <p>Prepárate para el verano con estilos frescos y livianos.</p>
-    <div class="buttons">
-      <button>Mujer</button>
-      <button>Hombre</button>
-      <button>Niños</button>
-    </div>
-  </div>
-
-  <div class="search-bar">
-    <label for="buscar">🔍</label>
-    <input type="text" id="buscar" placeholder="Buscar productos">
+    <div class="right"></div>
   </div>
 
 </body>
