--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
 
     .left {
-      background-image: url('https://i.imgur.com/NXy1EfD.jpg'); /* Imagen similar a la izquierda de Zara */
+      background-image: url('imagenes/camiseta.png'); /* Imagen similar a la izquierda de Zara */
       position: relative;
       display: flex;
       align-items: center;
