--- a/index.html
+++ b/index.html
@@ -1,137 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Camiseta Cuello Redondo</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inicio - Alejandra</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background-color: #fff;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f7f7f7;
       color: #333;
     }
+
     header {
       background-color: #000;
-      color: #fff;
+      color: white;
+      padding: 20px;
       text-align: center;
-      padding: 10px;
     }
+
     nav {
       display: flex;
       justify-content: center;
-      background-color: #f2f2f2;
-      padding: 10px;
-      gap: 20px;
+      background-color: #111;
     }
+
     nav a {
+      color: white;
+      padding: 14px 20px;
       text-decoration: none;
-      color: #000;
-      font-weight: bold;
+      display: block;
     }
-    .container {
+
+    nav a:hover {
+      background-color: #444;
+    }
+
+    .hero {
+      height: 80vh;
+      background-image: url('https://source.unsplash.com/1600x900/?fashion,model');
+      background-size: cover;
+      background-position: center;
       display: flex;
-      max-width: 1200px;
-      margin: 30px auto;
-      gap: 40px;
-      padding: 0 20px;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: white;
+      position: relative;
     }
-    .image-section img {
-      width: 100%;
-      max-width: 450px;
-      border: 1px solid #ccc;
+
+    .hero::after {
+      content: '';
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: rgba(0, 0, 0, 0.5);
     }
-    .details-section {
-      flex: 1;
+
+    .hero h1 {
+      z-index: 1;
+      font-size: 4rem;
     }
-    .details-section h2 {
-      font-size: 28px;
-      margin-bottom: 10px;
+
+    .section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: auto;
     }
-    .price {
-      font-size: 24px;
-      color: #c00;
-      margin: 15px 0;
-    }
-    .sizes span {
-      display: inline-block;
-      padding: 8px 12px;
-      margin: 5px;
-      border: 1px solid #ccc;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-    .sizes span.sold-out {
-      text-decoration: line-through;
-      color: #aaa;
-      border-color: #aaa;
-      cursor: not-allowed;
-    }
-    .button {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 25px;
+
+    footer {
       background-color: #000;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-      border-radius: 5px;
+      color: white;
+      text-align: center;
+      padding: 20px;
     }
-    .info-list {
-      margin-top: 15px;
-      list-style: none;
-      padding: 0;
-    }
-    .info-list li {
-      margin: 5px 0;
-    }
+
   </style>
 </head>
 <body>
 
   <header>
-    <h1>ROLAND</h1>
+    <h1>Alejandra</h1>
+    <p>Moda | Estilo | Tendencia</p>
   </header>
 
   <nav>
-    <a href="#">MUJER</a>
-    <a href="#">HOMBRE</a>
-    <a href="#">KIDS</a>
-    <a href="#">CANDY SHOP</a>
-    <a href="#">ACCESORIOS</a>
-    <a href="#">REBAJAS</a>
-    <a href="#">REGÍSTRATE</a>
+    <a href="#">Inicio</a>
+    <a href="#">Colección</a>
+    <a href="#">Nosotros</a>
+    <a href="#">Contacto</a>
   </nav>
 
-  <div class="container">
-    <div class="image-section">
-      <img src="imagenes/camiseta.png" alt="Camiseta Cuello Redondo">
-    </div>
-    <div class="details-section">
-      <p><strong>Roland</strong></p>
-      <h2>CAMISETA CUELLO REDONDO JERSEY VINO</h2>
-      <p>CÓDIGO: BCF-2321</p>
-      
-      <div class="sizes">
-        <p><strong>Talla:</strong></p>
-        <span>S</span>
-        <span>M</span>
-        <span>L</span>
-        <span class="sold-out">XL</span>
-        <span class="sold-out">XXL</span>
-      </div>
-
-      <button class="button">Agregar al carrito</button>
-
-      <ul class="info-list">
-        <li>• Pack x1</li>
-        <li>• Composición: 95% ALGODÓN – 5% ELASTANO</li>
-        <li>• Línea Basic</li>
-      </ul>
-
-      <p class="price">$9.99</p>
-    </div>
+  <div class="hero">
+    <h1>Bienvenidos a Alejandra</h1>
   </div>
+
+  <section class="section">
+    <h2>Sobre Nosotros</h2>
+    <p>Alejandra es una marca dedicada a la moda contemporánea, combinando estilo, elegancia y sostenibilidad. Nuestras colecciones están inspiradas en la mujer moderna que busca autenticidad en cada prenda.</p>
+  </section>
+
+  <footer>
+    &copy; 2025 Alejandra. Todos los derechos reservados.
+  </footer>
 
 </body>
 </html>
