--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: #fff0f5;
       color: #333;
+      background-image: url('https://images.unsplash.com/photo-1518791841217-8f162f1e1131?auto=format&fit=crop&w=1950&q=80');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
 
     header {
-      background-color: #ff69b4;
+      background-color: rgba(255, 105, 180, 0.9);
       color: white;
       text-align: center;
       padding: 30px 20px;
@@ -32,7 +36,7 @@
     }
 
     nav {
-      background-color: #ffe4e1;
+      background-color: rgba(255, 228, 225, 0.95);
       display: flex;
       justify-content: center;
       padding: 10px 0;
@@ -50,35 +54,26 @@
     }
 
     .hero {
-      background-image: url('https://source.unsplash.com/1600x700/?fashion,woman,style');
-      background-size: cover;
-      background-position: center;
-      height: 80vh;
+      background-color: rgba(255, 255, 255, 0.6);
+      height: 70vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      position: relative;
-    }
-
-    .hero::after {
-      content: '';
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background-color: rgba(0, 0, 0, 0.3);
+      text-align: center;
     }
 
     .hero h2 {
-      color: white;
-      z-index: 1;
+      color: #d63384;
       font-size: 3em;
-      text-align: center;
       padding: 0 20px;
     }
 
     .section {
+      background-color: rgba(255, 255, 255, 0.85);
       padding: 60px 20px;
       max-width: 900px;
-      margin: auto;
+      margin: 40px auto;
+      border-radius: 12px;
     }
 
     .section h2 {
@@ -92,7 +87,7 @@
     }
 
     footer {
-      background-color: #ff69b4;
+      background-color: rgba(255, 105, 180, 0.9);
       color: white;
       text-align: center;
       padding: 20px;
@@ -116,17 +111,9 @@
   </nav>
 
   <section class="hero">
-    <h2>Descubre tu estilo único con Alejandra</h2>
+    <h2>Descubre tu estilo único con Alejandra 🦋</h2>
   </section>
 
   <section class="section">
     <h2>Bienvenida a Alejandra</h2>
-    <p>Alejandra es más que una marca: es una declaración de identidad, confianza y belleza. Diseñamos pensando en ti, en tu autenticidad, y en tu camino único. Desde atuendos elegantes hasta opciones casuales con estilo, queremos acompañarte en cada paso de tu vida.</p>
-  </section>
-
-  <footer>
-    &copy; 2025 Alejandra. Todos los derechos reservados.
-  </footer>
-
-</body>
-</html>
+    <p>Alejandra es
